# minimum_distance_plugin

./: CCDWrapper.cpp  CCDWrapper.hpp  CMakeLists.txt  LICENSE.md  README.md  ccd_eigen.hpp  minimum_distance_plugin.cpp
worlds/: test.world
